--- a/.cvsignore
+++ b/.cvsignore
@@ -1,16 +1,15 @@
-stub-wnn.c
-stub-xt.c
-stub-x.c
-stub-olit.c
-stub-motif.c
 Clim-sizes.n
-slim
-slim.ol
-coverage-reportxm.lisp
+build.tmp
 coverage-reportol.lisp
+coverage-reportxm.lisp
+hpgl.output
 postscript.output
+stub-motif.c
+stub-olit.c
+stub-wnn.c
+stub-x.c
+stub-xt.c
 test-suite-reportol.lisp
 test-suite-reportxm.lisp
-hpgl.output
-foo.diffs
 update.log
+compile.out
