--- a/Makefile.win32
+++ b/Makefile.win32
@@ -13,14 +13,14 @@ Makefile=Makefile.win32
 
 CAT = type
 HOST = win32
-LISP = "e:\acl50b\lisp" -I "e:\acl50b\lisp.dxl"
+LISP = ..\src\lisp
 
 all: compile cat
 
 compile: 
-	echo (progn (require :cltl1) (load "sys\\compile") (exit)) > c:\.clinit.cl
-	$(LISP)
-	erase c:\.clinit.cl
+	echo (progn (require :cltl1) (load "sys/compile") (exit)) > build.tmp
+	echo (exit 0) >> build.tmp
+	$(LISP) +s build.tmp -I lisp.dxl -batch
 
 # Concatenation
 
