--- a/Makefile.sgi4d-svr4
+++ b/Makefile.sgi4d-svr4
@@ -1,4 +1,4 @@
-# $Header: /repo/cvs.copy/clim2/Makefile.sgi4d-svr4,v 1.12.16.1 1998/04/08 17:18:43 layer Exp $
+# $Header: /repo/cvs.copy/clim2/Makefile.sgi4d-svr4,v 1.12.16.2 1998/06/10 07:19:32 layer Exp $
 #
 #  Makefile.sigi4d-svr4 for CLIM 2.0
 #
@@ -9,7 +9,7 @@ Makefile=Makefile.sgi4d-svr4
 
 TKLIB=-lXm
 XTLIB=-lXt
-XLIB=-lX11 -lcvt
+XLIB=-lX11 # -lcvt
 
 XINCLUDES=-I/usr/include
 
