--- a/Makefile.alpha
+++ b/Makefile.alpha
@@ -1,4 +1,4 @@
-# $Header: /repo/cvs.copy/clim2/Makefile.alpha,v 1.6.10.1 1998/05/19 01:04:14 layer Exp $
+# $Header: /repo/cvs.copy/clim2/Makefile.alpha,v 1.6.10.2 1999/01/30 18:45:57 layer Exp $
 #
 #  Makefile.alpha for CLIM 2.0
 
@@ -20,6 +20,6 @@ PRODUCT-OBJS= $(PRODUCT-GENERIC-OBJS) $(STATIC-XM-OBJS) $(SHARED-XM-OBJS)
 
 PICFLAGS =
 SHAREFLAGS =
-MAKE_SHARED = make_shared
+MAKE_SHARED = ../src/bin/make_shared.dec
 
 include Makefile.generic
