--- a/Makefile.alpha
+++ b/Makefile.alpha
@@ -1,4 +1,4 @@
-# $Header: /repo/cvs.copy/clim2/Makefile.alpha,v 1.7 1998/05/19 18:50:19 layer Exp $
+# $Header: /repo/cvs.copy/clim2/Makefile.alpha,v 1.8 1999/02/25 08:23:21 layer Exp $
 #
 #  Makefile.alpha for CLIM 2.0
 
@@ -20,6 +20,6 @@ PRODUCT-OBJS= $(PRODUCT-GENERIC-OBJS) $(STATIC-XM-OBJS) $(SHARED-XM-OBJS)
 
 PICFLAGS =
 SHAREFLAGS =
-MAKE_SHARED = make_shared
+MAKE_SHARED = ../src/bin/make_shared.dec
 
 include Makefile.generic
