--- a/Makefile.rs6000
+++ b/Makefile.rs6000
@@ -1,4 +1,4 @@
-# $Header: /repo/cvs.copy/clim2/Makefile.rs6000,v 1.10 1998/05/19 18:50:20 layer Exp $
+# $Header: /repo/cvs.copy/clim2/Makefile.rs6000,v 1.11 1999/02/25 08:23:21 layer Exp $
 #
 #  Makefile.rs6000 for CLIM 2.0
 #
@@ -16,7 +16,7 @@ XLIB=-lX11
 XINCLUDES= -I/usr/include
 
 PRODUCT-OBJS= $(PRODUCT-GENERIC-OBJS) $(STATIC-XM-OBJS) $(SHARED-XM-OBJS)
-MAKE_SHARED = make_shared
+MAKE_SHARED = ../src/bin/make_shared.ibm
 STD_DEFINES = -DSYSV -DAIXV3
 AR = ar clq
 
