--- a/Makefile.rs6000
+++ b/Makefile.rs6000
@@ -1,4 +1,4 @@
-# $Header: /repo/cvs.copy/clim2/Makefile.rs6000,v 1.9.14.2 1999/01/30 18:45:57 layer Exp $
+# $Header: /repo/cvs.copy/clim2/Makefile.rs6000,v 1.9.14.3 1999/04/15 09:20:34 layer Exp $
 #
 #  Makefile.rs6000 for CLIM 2.0
 #
@@ -16,7 +16,7 @@ XLIB=-lX11
 XINCLUDES= -I/usr/include
 
 PRODUCT-OBJS= $(PRODUCT-GENERIC-OBJS) $(STATIC-XM-OBJS) $(SHARED-XM-OBJS)
-MAKE_SHARED = ../src/bin/make_shared.ibm
+MAKE_SHARED = ../src/bin/make_shared.ibm -make_exp ../src/bin/make_exp
 STD_DEFINES = -DSYSV -DAIXV3
 AR = ar clq
 
