--- a/Makefile.defs
+++ b/Makefile.defs
@@ -1,4 +1,4 @@
-# $Id: Makefile.defs,v 1.49 1999/05/04 01:20:59 layer Exp $
+# $Id: Makefile.defs,v 1.50 2000/02/03 00:38:59 cox Exp $
 #
 #  Makefile.defs for CLIM 2.0
 
@@ -16,7 +16,7 @@ DCL	= dcli
 endif
 
 CL	= $(LISP) -I $(DCL)
-CLOPTS	= -qq -batch -backtrace-on-error
+CLOPTS	= -qq -batch -backtrace-on-error -locale japan.euc
 
 RM	= rm
 CAT	= cat
