--- a/Makefile.defs
+++ b/Makefile.defs
@@ -1,4 +1,4 @@
-# $Id: Makefile.defs,v 1.52 2000/06/08 19:16:51 layer Exp $
+# $Id: Makefile.defs,v 1.53 2000/06/12 17:29:31 layer Exp $
 #
 #  Makefile.defs for CLIM 2.0
 
@@ -8,7 +8,7 @@ CLIM		= clim.dxl
 SHARED_EXT = so
 
 LISP	= ../src/lispi$(exe)
-DCL	= dcli
+DCL	= mlisp
 
 # Set the case mode when building and dumping an image
 # case_mode:
