--- a/Makefile.wnn
+++ b/Makefile.wnn
@@ -1,4 +1,4 @@
-# $Header: /repo/cvs.copy/clim2/Makefile.wnn,v 1.7 2000/06/13 14:26:04 layer Exp $
+# $Header: /repo/cvs.copy/clim2/Makefile.wnn,v 1.7.10.1 2001/06/08 04:18:22 layer Exp $
 #
 #  Makefile.wnn for CLIM 2.0
 #
@@ -79,8 +79,10 @@ ifeq ($(REDHAT),6)
 REDHATLIBS = -lcrypt
 endif
 
+ifeq ($(OS_NAME),linux)
 ifeq ($(MACHINE),ppc)
 REDHATLIBS = -lcrypt
+endif
 endif
 
 ifeq ($(OS_NAME),freebsd)
