--- a/Makefile.cobjs
+++ b/Makefile.cobjs
@@ -1,4 +1,4 @@
-# $Header: /repo/cvs.copy/clim2/Makefile.cobjs,v 1.19.46.1 2002/02/08 19:11:20 layer Exp $
+# $Header: /repo/cvs.copy/clim2/Makefile.cobjs,v 1.19.46.1.6.1 2003/04/30 20:18:41 layer Exp $
 #
 #  Makefile.cobj for CLIM 2.0
 #
@@ -53,7 +53,7 @@ xlibsupport.o : xlib/xlibsupport.c
 climxm.$(SHARED_EXT): xlibsupport.o xtsupport.o xmsupport.o $(IMPORTS)
 	(eval '$(SET_LIBRARY_PATH)' ; \
 	$(MAKE_SHARED) $(SHAREFLAGS) -o climxm.$(SHARED_EXT) \
-		xlibsupport.o xtsupport.o xmsupport.o \
+		xlibsupport.o xtsupport.o xmsupport.o $(THREADLIB) \
 		$(IMPORTS) $(TKLIB) $(XTLIB) $(XLIB) $(MOTIFXTRAS))
 
 # climxm.sl: xlibsupport.o xtsupport.o xmsupport.o $(IMPORTS)
