--- a/Makefile.linux
+++ b/Makefile.linux
@@ -1,4 +1,4 @@
-# $Id: Makefile.linux,v 1.2.36.1 2001/04/24 19:53:20 layer Exp $
+# $Id: Makefile.linux,v 1.2.36.1.28.1 2003/04/30 20:18:41 layer Exp $
 
 include Makefile.defs
 
@@ -9,6 +9,7 @@ XINCLUDES=-I/usr/X11R6/include
 TKLIB=-lXm -lXpm -lXext -lXp
 XTLIB=-lXt
 XLIB=-lX11
+THREADLIB = -lpthread
 
 SET_LIBRARY_PATH = LD_RUN_PATH=/usr/X11R6/lib:/lib:/usr/lib; export LD_RUN_PATH
 
