--- a/Makefile.wnn
+++ b/Makefile.wnn
@@ -1,4 +1,4 @@
-# $Header: /repo/cvs.copy/clim2/Makefile.wnn,v 1.7.10.1 2001/06/08 04:18:22 layer Exp $
+# $Header: /repo/cvs.copy/clim2/Makefile.wnn,v 1.7.10.1.22.1 2003/04/30 20:18:41 layer Exp $
 #
 #  Makefile.wnn for CLIM 2.0
 #
@@ -91,4 +91,4 @@ endif
 
 wnn.$(SHARED_EXT): $(WNN_OBJS)
 	$(MAKE_SHARED) $(SHAREFLAGS) -o wnn.$(SHARED_EXT) $(WNN_OBJS) \
-		$(REDHATLIBS)
+		$(REDHATLIBS) $(THREADLIB)
