--- a/Makefile.wnn
+++ b/Makefile.wnn
@@ -1,4 +1,4 @@
-# $Header: /repo/cvs.copy/clim2/Makefile.wnn,v 1.7.10.1.22.1 2003/04/30 20:18:41 layer Exp $
+# $Header: /repo/cvs.copy/clim2/Makefile.wnn,v 1.7.10.1.22.2 2003/05/30 01:16:26 layer Exp $
 #
 #  Makefile.wnn for CLIM 2.0
 #
@@ -76,6 +76,18 @@ REDHATLIBS = -lcrypt
 endif
 
 ifeq ($(REDHAT),6)
+REDHATLIBS = -lcrypt
+endif
+
+ifeq ($(REDHAT),7)
+REDHATLIBS = -lcrypt
+endif
+
+ifeq ($(REDHAT),8)
+REDHATLIBS = -lcrypt
+endif
+
+ifeq ($(REDHAT),9)
 REDHATLIBS = -lcrypt
 endif
 
