--- a/Makefile.cobjs
+++ b/Makefile.cobjs
@@ -1,4 +1,4 @@
-# $Header: /repo/cvs.copy/clim2/Makefile.cobjs,v 1.20 2002/07/09 20:57:14 layer Exp $
+# $Id: Makefile.cobjs,v 1.21 2003/07/03 21:04:26 layer Exp $
 #
 #  Makefile.cobj for CLIM 2.0
 #
@@ -53,7 +53,7 @@ xlibsupport.o : xlib/xlibsupport.c
 climxm.$(SHARED_EXT): xlibsupport.o xtsupport.o xmsupport.o $(IMPORTS)
 	(eval '$(SET_LIBRARY_PATH)' ; \
 	$(MAKE_SHARED) $(SHAREFLAGS) -o climxm.$(SHARED_EXT) \
-		xlibsupport.o xtsupport.o xmsupport.o \
+		xlibsupport.o xtsupport.o xmsupport.o $(THREADLIB) \
 		$(IMPORTS) $(TKLIB) $(XTLIB) $(XLIB) $(MOTIFXTRAS))
 
 # climxm.sl: xlibsupport.o xtsupport.o xmsupport.o $(IMPORTS)
